--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,11 @@
   		<version>1.2.4</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>com.github.mkolisnyk</groupId>
+  		<artifactId>cucumber-reports</artifactId>
+  		<version>1.0.4</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
